hphp/hack/test/typecheck/reified_generics/is_as_deep_inference_check.php.like_types.exp
File "is_as_deep_inference_check.php", line 6, characters 10-10:
Was expecting a return type hint (Typing[4030])
File "is_as_deep_inference_check.php", line 15, characters 5-6:
Invalid argument (Typing[4110])
File "is_as_deep_inference_check.php", line 6, characters 12-45:
Expected Reified<Reified<Reified<int>>>
File "is_as_deep_inference_check.php", line 11, characters 8-8:
But got (int & <expr#1>) from this "as" assertion
